--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Giancarlo Ferretto",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.6.0",
     "puppeteer": "^16.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
