--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   "author": "Giancarlo Ferretto",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
     "mongoose": "^6.6.0",
+    "morgan": "^1.10.0",
     "puppeteer": "^16.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/helmet": "^4.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
