--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
   },
   "author": "Giancarlo Ferretto",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
     "puppeteer": "^16.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19",
