--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
+    "html-encoder-decoder": "^1.3.9",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
-    "puppeteer": "^16.2.0"
+    "puppeteer": "^16.2.0",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
