--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "puppeteer": "^16.2.0",
     "underscore": "^1.13.6"
   },
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/node-fetch": "^2.6.2",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
