--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
     "puppeteer": "^16.2.0",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
